# ChangeLog for media-gfx/gwenview
# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-gfx/gwenview/ChangeLog,v 1.25 2005/03/22 19:16:32 lanius Exp $

*gwenview-1.2.0_pre4 (22 Mar 2005)

  22 Mar 2005; Heinrich Wendel <lanius@gentoo.org> -gwenview-1.1.8.ebuild,
  -gwenview-1.2.0_pre1.ebuild, +gwenview-1.2.0_pre4.ebuild:
  version bump

*gwenview-1.2.0_pre1 (29 Jan 2005)

  29 Jan 2005; Gregorio Guidi <greg_g@gentoo.org> +gwenview-1.2.0_pre1.ebuild:
  Version bump (#79932).

*gwenview-1.1.8 (10 Jan 2005)

  10 Jan 2005; Heinrich Wendel <lanius@gentoo.org> -gwenview-1.1.7.ebuild,
  +gwenview-1.1.8.ebuild:
  version bump

  31 Dec 2004; Jason Wever <weeve@gentoo.org> gwenview-1.1.7.ebuild:
  Added ~sparc keyword.

*gwenview-1.1.7 (20 Dec 2004)

  20 Dec 2004; Heinrich Wendel <lanius@gentoo.org> -gwenview-1.1.6.ebuild,
  +gwenview-1.1.7.ebuild:
  version bump

*gwenview-1.1.6 (29 Nov 2004)

  29 Nov 2004; lanius@gentoo.org -gwenview-1.1.4.ebuild,
  +gwenview-1.1.6.ebuild:
  version bump

*gwenview-1.1.4 (02 Aug 2004)

  02 Aug 2004; Dominik Stadler <centic@gentoo.org> +gwenview-1.1.4.ebuild:
  Add new version 1.1.4.

*gwenview-1.1.3 (03 Jul 2004)

  03 Jul 2004; Heinrich Wendel <lanius@gentoo.org> gwenview-1.1.1.ebuild,
  gwenview-1.1.3.ebuild:
  version bump, bug #54511

  29 Jun 2004; Carsten Lohrke <carlo@gentoo.org> gwenview-1.0.1.ebuild,
  gwenview-1.1.1.ebuild:
  QA: kde-base -> kde

  22 Mar 2004; David Holm <dholm@gentoo.org> gwenview-1.1.1.ebuild:
  Added to ~ppc.

*gwenview-1.1.1 (22 Mar 2004)

  22 Mar 2004; Heinrich Wendel <lanius@gentoo.org> gwenview-1.0.0.ebuild,
  gwenview-1.1.0.ebuild, gwenview-1.1.1.ebuild:
  remove old versions; version bump

*gwenview-1.1.0 (02 Feb 2004)

  02 Feb 2004; Heinrich Wendel <lanius@gentoo.org> gwenview-1.0.1.ebuild,
  gwenview-1.1.0.ebuild:
  mark 1.0.1 x86; bump to 1.1.0

*gwenview-1.0.1 (12 Jan 2004)
