@@ -1,16 +1,16 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-MD5 bb4552a0e34234595fece18159247012 gwenview-1.2.0_pre4.ebuild 480
+MD5 a1c35ee77a5405219914fa2216e088fd gwenview-1.2.0_pre4.ebuild 644
 MD5 8f5b2ac340c74aa79197e0b2264c64e1 gwenview-1.0.1.ebuild 424
-MD5 100d1a46258ee0dd76dc2d8c089399bc ChangeLog 3439
+MD5 a501824e38703ab04b00298fc6b99107 ChangeLog 3551
 MD5 503ccb1138f9c49f0855884d830988a6 metadata.xml 253
 MD5 a24985c21c0077a9e8820a5919ef5e94 files/digest-gwenview-1.2.0_pre4 72
 MD5 ec9b547539178737eb9327ca97270c50 files/digest-gwenview-1.0.1 67
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.1 (GNU/Linux)
 
-iD8DBQFCQG8xevY57Fted3ERAoCaAJ916T6vevoT1c1xfHFXWzBAEcbyMACfd0mq
-57bgoyoQQ0trB1QRr9gpJoY=
-=jyzq
+iD8DBQFCQ/tkevY57Fted3ERAulPAKCBk2Dj2LoItQvfxlFRdTlW2lZNPgCfQJqP
+KbmPYfw+OIsDJUbHxQdZxas=
+=uGzv
 -----END PGP SIGNATURE-----
