@@ -1,6 +1,6 @@
 # Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-gfx/gwenview/gwenview-1.2.0_pre4.ebuild,v 1.1 2005/03/22 19:16:32 lanius Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-gfx/gwenview/gwenview-1.2.0_pre4.ebuild,v 1.2 2005/03/25 11:51:19 lanius Exp $
 
 inherit kde
 
@@ -13,6 +13,13 @@ SRC_URI="mirror://sourceforge/${PN}/${MY_P}.tar.bz2"
 
 LICENSE="GPL-2"
 KEYWORDS="~x86 ~amd64 ~ppc ~sparc"
-IUSE=""
+IUSE="kipi"
+DEPEND="kipi? ( >=media-plugins/kipi-plugins-0.1.0_beta2 )"
 
 need-kde 3
+
+src_compile() {
+	local myconf="`use_enable kipi`"
+	kde_src_compile myconf configure
+	make || die
+}
